--- a/Entrega final Gaston Saavedra js/index.html
+++ b/Entrega final Gaston Saavedra js/index.html
@@ -4,63 +4,163 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
+    <meta name="description" content="Compra de ropa deportiva" />
+    <meta
+      name="keywords"
+      content="ROPA, REMERAS, ZAPATILLAS, CAMPERAS, DEPORTES, NIÑOS, BUZOS, SHORTS, BOTINES, CAMISETAS, HOMBRE, MUJER"
     />
-    <title>Document</title>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <title>SportMarket</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="./" />
   </head>
   <body>
-    <div class="container">
-      <h1>Carrito</h1>
-      <hr />
-      <table class="table">
-        <thead>
+    <header class="header-principal">
+      <nav class="navbar navbar-expand-lg bg-danger">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"
+            ><img src="./img/asd.jpg" alt="logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0"></ul>
+            <p>
+              <a
+                class="bx bx-shopping-bag"
+                id="cart-icon"
+                data-bs-toggle="collapse"
+                href="#collapseExample"
+                role="button"
+                aria-expanded="false"
+                aria-controls="collapseExample"
+              >
+              </a>
+            </p>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="collapse" id="collapseExample">
+      <div class="card card-body">
+        <div class="container">
+          <h1>Carrito</h1>
+          <hr />
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Item</th>
+                <th scope="col">Cantidad</th>
+                <th scope="col">Acción</th>
+                <th scope="col">Total</th>
+              </tr>
+            </thead>
+            <tbody id="items"></tbody>
+            <tfoot>
+              <tr id="footer">
+                <th scope="row" colspan="5">
+                  Carrito vacío - comience a comprar!
+                </th>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+
+        <template id="template-footer">
+          <th scope="row" colspan="2">Total productos</th>
+          <td>10</td>
+          <td>
+            <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+              vaciar todo
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+            >
+              Comprar
+            </button>
+
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="exampleModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">
+                      Gracias por la compra!
+                    </h1>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body"></div>
+                  <div class="modal-footer">
+                    <!-- Aca trate de  aplicar alguna funcion para q se cierre el carrito haciendo click en el boton cerrar o aceptar pero no lo logre-->
+                    <!-- Tambien quise que al darle al boton comprar mandara a otra pagina pero no logre que me cargue los productos q tenia seleccionados para comprar -->
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                      id="vaciarCarrito"
+                    >
+                      Cerrar
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-primary btn-aceptar"
+                      id="vaciarCarrito"
+                    >
+                      Aceptar
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </td>
+          <td class="font-weight-bold">$ <span>5000</span></td>
+        </template>
+
+        <template id="template-carrito">
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Item</th>
-            <th scope="col">Cantidad</th>
-            <th scope="col">Acción</th>
-            <th scope="col">Total</th>
+            <th scope="row">id</th>
+            <td>Café</td>
+            <td>1</td>
+            <td>
+              <button class="btn btn-info btn-sm">+</button>
+              <button class="btn btn-danger btn-sm">-</button>
+            </td>
+            <td>$ <span>500</span></td>
           </tr>
-        </thead>
-        <tbody id="items"></tbody>
-        <tfoot>
-          <tr id="footer">
-            <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
-          </tr>
-        </tfoot>
-      </table>
-      <div class="row" id="cards"></div>
+        </template>
+      </div>
     </div>
 
-    <template id="template-footer">
-      <th scope="row" colspan="2">Total productos</th>
-      <td>10</td>
-      <td>
-        <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-          vaciar todo
-        </button>
-      </td>
-      <td class="font-weight-bold">$ <span>5000</span></td>
-    </template>
+    <div class="row container m-auto" id="cards"></div>
 
-    <template id="template-carrito">
-      <tr>
-        <th scope="row">id</th>
-        <td>Café</td>
-        <td>1</td>
-        <td>
-          <button class="btn btn-info btn-sm">+</button>
-          <button class="btn btn-danger btn-sm">-</button>
-        </td>
-        <td>$ <span>500</span></td>
-      </tr>
-    </template>
-
-    <template id="templateCard">
+    <template id="template-card">
       <div class="col-12 mb-2 col-md-4">
         <div class="card">
           <img src="" alt="" class="card-img-top" />
