--- a/Entrega final Gaston Saavedra js/index.html
+++ b/Entrega final Gaston Saavedra js/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Compra de ropa deportiva" />
-    <meta
-      name="keywords"
-      content="ROPA, REMERAS, ZAPATILLAS, CAMPERAS, DEPORTES, NIÑOS, BUZOS, SHORTS, BOTINES, CAMISETAS, HOMBRE, MUJER"
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
     />
     <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
     <title>SportMarket</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/estilos.css" />
     <link rel="shortcut icon" href="./" />
   </head>
   <body>
@@ -34,144 +41,76 @@
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
+      
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0"></ul>
-            <p>
-              <a
-                class="bx bx-shopping-bag"
-                id="cart-icon"
-                data-bs-toggle="collapse"
-                href="#collapseExample"
-                role="button"
-                aria-expanded="false"
-                aria-controls="collapseExample"
-              >
-              </a>
-            </p>
+          <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <!-- <form class="d-flex" role="search">
+                <input class="form-control me-1 " type="search" placeholder="Buscar..." aria-label="Search">
+                <button class="btn btn-outline-success btn-primary" type="submit">Buscar</button>
+              </form> -->
+          <li class="nav-item ">
+            <a
+              class="nav-link text-white"
+              data-bs-toggle="modal"
+              data-bs-target="#modal"
+            >
+              <i class="bi bi-cart mx-5 " id="carritoContenedor">0</i>
+            </a>
+          </li>
+        </ul>
           </div>
-        </div>
       </nav>
     </header>
-    <div class="collapse" id="collapseExample">
-      <div class="card card-body">
-        <div class="container">
-          <h1>Carrito</h1>
-          <hr />
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Item</th>
-                <th scope="col">Cantidad</th>
-                <th scope="col">Acción</th>
-                <th scope="col">Total</th>
-              </tr>
-            </thead>
-            <tbody id="items"></tbody>
-            <tfoot>
-              <tr id="footer">
-                <th scope="row" colspan="5">
-                  Carrito vacío - comience a comprar!
-                </th>
-              </tr>
-            </tfoot>
-          </table>
-        </div>
+    <main>
+      <div class="row mt-5 gap-4 flex-row articulo" id="contenedor"></div>
+    </main>
 
-        <template id="template-footer">
-          <th scope="row" colspan="2">Total productos</th>
-          <td>10</td>
-          <td>
-            <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-              vaciar todo
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              id="vaciarCarrito"
-              data-bs-toggle="modal"
-              data-bs-target="#exampleModal"
-            >
-              Comprar
-            </button>
-
-            <!-- Modal -->
-            <div
-              class="modal fade"
-              id="exampleModal"
-              tabindex="-1"
-              aria-labelledby="exampleModalLabel"
-              aria-hidden="true"
-            >
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">
-                      Gracias por la compra!
-                    </h1>
-                    <button
-                      type="button"
-                      class="btn-close"
-                      data-bs-dismiss="modal"
-                      aria-label="Close"
-                    ></button>
-                  </div>
-                  <div class="modal-body"></div>
-                  <div class="modal-footer">
-                    <!-- Aca trate de  aplicar alguna funcion para q se cierre el carrito haciendo click en el boton cerrar o aceptar pero no lo logre-->
-                    <!-- Tambien quise que al darle al boton comprar mandara a otra pagina pero no logre que me cargue los productos q tenia seleccionados para comprar -->
-                    <button
-                      type="button"
-                      class="btn btn-secondary "
-                      data-bs-dismiss="modal"
-                      
-                    >
-                      Cerrar
-                    </button>
-                  </div>
-                </div>
-              </div>
+    <div class="container-xl">
+      <div class="modal" tabindex="-1" role="dialog" id="modal">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Carrito</h5>
+              <button
+                type="button"
+                class="close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
-          </td>
-          <td class="font-weight-bold">$ <span>5000</span></td>
-        </template>
+            <div class="modal-body" id="modal-body"></div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" id="vaciarCarrito">
+                Vaciar carrito
+              </button>
+              <button type="button" id="procesarCompra" class="btn btn-primary">
+                Continuar compra
+              </button>
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Cerrar
+              </button>
 
-        <template id="template-carrito">
-          <tr>
-            <th scope="row">id</th>
-            <td>Café</td>
-            <td>1</td>
-            <td>
-              <button class="btn btn-info btn-sm">+</button>
-              <button class="btn btn-danger btn-sm">-</button>
-            </td>
-            <td>$ <span>500</span></td>
-          </tr>
-        </template>
+              <span>Precio total:</span>
+              <p class="text-center" id="precioTotal"></p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="row container m-auto" id="cards"></div>
-
-    <template id="template-card">
-      <div class="col-12 mb-2 col-md-4">
-        <div class="card">
-          <img src="" alt="" class="card-img-top" />
-          <div class="card-body">
-            <h5>Titulo</h5>
-            <p>Precio</p>
-            <button class="btn btn-dark">Comprar</button>
-          </div>
-        </div>
-      </div>
-    </template>
-
+    <script src="./js/apps.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/apps.js"></script>
   </body>
 </html>
