--- a/Entrega final Gaston Saavedra js/compra.html
+++ b/Entrega final Gaston Saavedra js/compra.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,21 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
-
     <link rel="stylesheet" href="./css/estilos.css" />
     <link rel="stylesheet" href="./css/spinner.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-
-    <script type="text/javascript">
-        emailjs.init('0bU4qjecNcP2aiuNx')
-    </script>
+    <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script type="text/javascript">
+    emailjs.init('oXfSx9T2_kABlvI-z')
+  </script>
     <title>Ecommerce</title>
 </head>
-
 <body>
     <header class="header-principal">
         <nav class="navbar navbar-expand-lg bg-danger">
@@ -55,9 +51,7 @@
         </ul>
         </nav>
     </header>
-
     <button id="activarFuncion" class="btn btn-secondary boton mt-2">¡Click!</button>
-
     <main>
         <div class="container">
             <div class="row mt-3">
@@ -119,22 +113,12 @@
                             </div>
                         </div>
                     </form>
-
-
                 </div>
-
-
             </div>
-
         </div>
     </main>
-
-
-
-
     <script src="./js/apps.js"></script>
     <script src="./bootstrap.bundle.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
+</body>
 </html>
