--- a/Entrega final Gaston Saavedra js/index.html
+++ b/Entrega final Gaston Saavedra js/index.html
@@ -43,12 +43,12 @@
             <span class="navbar-toggler-icon"></span>
       
           </button>
-          <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <!-- <form class="d-flex" role="search">
-                <input class="form-control me-1 " type="search" placeholder="Buscar..." aria-label="Search">
-                <button class="btn btn-outline-success btn-primary" type="submit">Buscar</button>
-              </form> -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+              <form class="d-flex " role="search">
+                    <input type="text" id="formulario" class="form-control my-2" placeholder="Buscar...">
+                    <button class="btn btn-primary my-2 m-1" id="boton">Buscar</button>
+              </form>
           <li class="nav-item ">
             <a
               class="nav-link text-white"
@@ -59,7 +59,6 @@
             </a>
           </li>
         </ul>
-          </div>
       </nav>
     </header>
     <main>
@@ -96,7 +95,6 @@
               >
                 Cerrar
               </button>
-
               <span>Precio total:</span>
               <p class="text-center" id="precioTotal"></p>
             </div>
@@ -104,7 +102,6 @@
         </div>
       </div>
     </div>
-
     <script src="./js/apps.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script
